--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,8 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+A tool built in Ruby and Rails to gather contact information from a given URL. It is very useful for sales prospecting or public relations outreach. As it is currently built, it is set up to gather information on travel accommodation providers, but it can be configured to pull info on any site.
 
-Things you may want to cover:
+The tool takes in a list of URLs as input, and returns the contact email address, URLs of the Contact Us or About Us pages, and URLs of the site's Twitter, Facebook, Instagram, and YouTube profiles.
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+To Do:
+* Enhanced email regex
